# SeeBeyond

./: .gitignore  README.md  TECHNICAL.md  pyproject.toml  run.py
backend/: README.md
backend/sound/: test_sound.py  voice.py
backend/sound/core2/: config.h  core2.ino  mqtt_handler.cpp  mqtt_handler.h  wav_player.cpp  wav_player.h
coach/: README.md
coach/backend/: README.md  pyproject.toml
coach/backend/sound/: coach.py  voice.py
coach/backend/vision/: pyproject.toml
coach/core2/: platformio.ini
coach/core2/src/: config.h  core2.ino  mqtt_handler.cpp  mqtt_handler.h  tts_client.cpp  tts_client.h  wav_player.cpp  wav_player.h
coach/data/samples/: DATA.md
coach/sounds/: correct.aif  false.aif
core2/: platformio.ini
core2/src/: config_example.h  core2.ino  mqtt_handler.cpp  mqtt_handler.h  wav_player.cpp  wav_player.h
data/samples/: yolo_pose.txt
squat-evaluator/: README.md  main.py  pyproject.toml  requirements.txt
squat-evaluator/.depthai_cached_models/6269190d4ac9fb0fbe4a615f1b2d179b2ac53c8e/: metadata.yaml
squat-evaluator/data/: feature_stats.json  form_model.joblib  manifest.csv
squat-evaluator/data/reps/: rep_0001_good.npy  rep_0002_good.npy  rep_0003_good.npy  rep_0004_good.npy  rep_0005_good.npy  rep_0006_good.npy  rep_0007_good.npy  (+58 more)
squat-evaluator/scripts/: capture_reps.py  evaluate_rep.py  plot_skeleton_3d.py  run_counter.py  run_counter_visual.py  run_debug_overlay.py  run_stream.py  show_intrinsics.py  train_classifier.py  view_rep.py
squat-evaluator/src/: classifier.py  features.py  pipeline.py  rep_counter.py
(+10 files in other folders)
