[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elevenlabs==2.46.0",
    "mistralai==2.4.5",
    "paho-mqtt==2.1.0",
    "python-dotenv==1.2.2",
    "depthai==3.6.1",
    "matplotlib==3.10.9",
    "numpy==2.4.4",
    "opencv-python==4.13.0.92",
    "pyserial==3.5",
    "joblib==1.5.3",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "depthai-nodes==0.5.0",
    "dotenv==0.9.9",
    "eval-type-backport==0.3.1",
    "fonttools==4.62.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.13",
    "importlib-metadata==8.7.1",
    "jsonpath-python==1.1.6",
    "kiwisolver==1.5.0",
    "opencv-python-headless==4.10.0.84",
    "opentelemetry-api==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "packaging==26.2",
    "pandas==3.0.2",
    "pillow==12.2.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "requests==2.33.1",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "typing-inspection==0.4.2",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
    "websockets==16.0",
    "zipp==3.23.1",
]
